[package]
name = "crypto-key-tool"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "A tool for interacting with bitcoin keys and addresses"
repository = "https://github.com/nullren/crypto-key-tool"

[dependencies]
base58 = "0.2.0"
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
k256 = "0.13.4"
ripemd = "0.1.3"
sha2 = "0.10.8"
